--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <div class="hidden bg-background text-foreground"></div> 
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
